# rule

./: .gitignore  .gitmodules  CMakeLists.txt
examples/cardgame/: cardgame.cpp
include/: collection.hpp  context.hpp  entity.hpp  operation.hpp  policy.hpp
test/: CMakeLists.txt  test_cardgame.cpp
